--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,7 +20,9 @@
 
 title: Your awesome title
 email: xietheus@gmail.com
-description: >- # this means to ignore newlines until "baseurl:" Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+description: >- # this means to ignore newlines until "baseurl:"
+  Changhe Xie
+  The University of Hong Kong
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
