--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,11 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Changhe Xie
 email: xietheus@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Changhe Xie
-  The University of Hong Kong
+description: >- # this means to ignore newlines until "baseurl:" Changhe Xie The University of Hong Kong
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
