change config fro header list

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,6 +40,12 @@ author:
   name: Changhe Xie
   email: "xietheus@gmail.com"
 
+# For the header list
+header_pages:
+  - index.markdown
+  - projects.markdown
+  - CV.markdown
+
 defaults:
   - scope:
       path: "assets/ChangheXieCVEn.pdf"
