--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,14 +31,15 @@ theme: minima
 minima:
   skin: auto
   social_links:
+    - { platform: email, user_url: "mailto:xietheus@gmail.com"}
     - { platform: github, user_url: "https://github.com/nonnature" }
     - { platform: twitter, user_url: "https://twitter.com/xietheus" }
     - { platform: linkedin, user_url: "https://www.linkedin.com/in/changhe-xie-182698268/"}
 plugins:
   # - jekyll-feed
-author:
-  name: Changhe Xie
-  email: "xietheus@gmail.com"
+# author:
+#   name: Changhe Xie
+#   email: "xietheus@gmail.com"
 
 # For the header list
 header_pages:
